fix: CodeMirror text color in dark mode

--- a/styles/code.css
+++ b/styles/code.css
@@ -5,3 +5,7 @@ html {
 html.dark {
   --slidev-code-background: rgba(0, 0, 0, 0.3) !important;
 }
+
+.CodeMirror{
+  color: inherit !important;
+}
